k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sms-service
spec:
  type: NodePort
  selector:
    app: sms-service
  ports:
    - port: 8000
      targetPort: 8000
