k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sms-ingress
spec:
  rules:
    - host: sms.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sms-service
                port:
                  number: 8000
